Fix some case related whitespace issues

--- a/client/app/src/app/case/components/case-breadcrumb/case-breadcrumb.component.css
+++ b/client/app/src/app/case/components/case-breadcrumb/case-breadcrumb.component.css
@@ -17,6 +17,6 @@
     background: #212a3f;
     top: 0px;
     left: 0px;
-    height: 64px;
+    height: 55px;
     width: 65px;
 }
