--- a/client/app/src/app/case/components/new-case/new-case.component.css
+++ b/client/app/src/app/case/components/new-case/new-case.component.css
@@ -19,7 +19,7 @@
     margin-left: 10px;
 }
 .wrapper {
-    margin: 65px 15px 0px;
+    margin: 30px 15px 0px;
 }
 paper-button {
     background: var(--accent-color);
